src/objects/QPMS__CSMS_Standard_General_Task__c.object
<CustomObject>
    <description>CSMS Standard General Task</description>
    <fields>
        <fullName>QPMS__AdhocTask_Title__c</fullName>
        <description>AdhocTask Title</description>
        <inlineHelpText>AdhocTask Title</inlineHelpText>
        <label>AdhocTask Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <description>Adhoc Tak Sequence</description>
        <inlineHelpText>Adhoc Tak Sequence</inlineHelpText>
        <label>Adhoc Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>Allowed Days</description>
        <inlineHelpText>Allowed Days</inlineHelpText>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSMS Standard</description>
        <inlineHelpText>CSMS Standard</inlineHelpText>
        <label>CSMS Standard</label>
        <referenceTo>QPMS__CSMS_Standard__c</referenceTo>
        <relationshipLabel>CSMS Standard General Tasks</relationshipLabel>
        <relationshipName>CSMS_Standard_General_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Id__c</fullName>
        <formula>QPMS__CSMS_Standard__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Name__c</fullName>
        <formula>QPMS__CSMS_Standard__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>Sequence in which task should be performed.</description>
        <inlineHelpText>Sequence in which task should be performed. For example, if value is &apos;3&apos; then tasks with sequence numbers &apos;1&apos; and &apos;2&apos; should be performed first.</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSMS Standard General Task</label>
    <nameField>
        <displayFormat>CSMSSGT_{00000}</displayFormat>
        <label>CSMS Standard General Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMS Standard General Tasks</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Adhoc</fullName>
        <active>true</active>
        <description>Adhoc</description>
        <label>Adhoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Calibrate</fullName>
        <active>true</active>
        <description>Calibrate</description>
        <label>Calibrate</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Closure</fullName>
        <active>true</active>
        <description>Closure</description>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Maintenance</fullName>
        <active>true</active>
        <description>Maintenance</description>
        <label>Maintenance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>